--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -38,6 +38,7 @@
     },
     "dependencies": {
         "@sindresorhus/fnv1a": "^1.2.0",
+        "big-integer": "^1.6.44",
         "convict": "^5.0.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
