Add jump hash algorithm

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -38,9 +38,9 @@
     },
     "dependencies": {
         "@sindresorhus/fnv1a": "^1.2.0",
-        "big-integer": "^1.6.44",
         "convict": "^5.0.0",
         "inversify": "^5.0.1",
+        "jumphash": "^0.2.2",
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11"
