Use BN npm to implement jump hash

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -4,6 +4,7 @@
     "types": ["reflect-metadata"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "compilerOptions": {
         "outDir": "dist"
     }
