--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@types/bn.js": "^4.11.5",
         "@types/convict": "^4.2.1",
         "@types/jest": "^24.0.11",
         "@types/node": "^11.13.4",
@@ -38,9 +39,9 @@
     },
     "dependencies": {
         "@sindresorhus/fnv1a": "^1.2.0",
+        "bn.js": "^5.0.0",
         "convict": "^5.0.0",
         "inversify": "^5.0.1",
-        "jumphash": "^0.2.2",
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11"
