--- a/build.yaml
+++ b/build.yaml
@@ -81,4 +81,4 @@ steps:
       displayName: 'Component Detection'
       inputs:
           failOnAlert: true
-      condition: and(in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI'))
+      condition: in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI')
