Enable use of consistent hash algorithm for PK generation (#254)
* Initial checkin

* Disable cosmos account param validation

* Add jump hash algorithm

* Revert

* Typo

* Use BN npm to implement jump hash

* Set default buckets range

* Convert to supported number

* Update tests

* Revert

* Switch to esnext target

* Exclude coverage

* Move ignore to base jest config

* remove dev depend

* .

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -4,7 +4,9 @@
     "types": ["reflect-metadata"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "compilerOptions": {
-        "outDir": "dist"
+        "outDir": "dist",
+        "target": "esnext"
     }
 }
