--- a/packages/resource-deployment/templates/function-app-template.json
+++ b/packages/resource-deployment/templates/function-app-template.json
@@ -39,7 +39,7 @@
         },
         "tenantId": {
             "type": "string",
-            "defaultValue": "",
+            "defaultValue": "72f988bf-86f1-41af-91ab-2d7cd011db47",
             "metadata": {
                 "description": "The App registration tenant ID"
             }
