--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -49,8 +49,11 @@
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
+        "azure-services": "1.0.0",
         "common": "1.0.0",
+        "inversify": "^5.0.1",
+        "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
-        "inversify": "^5.0.1"
+        "service-library": "1.0.0"
     }
 }
