Added guid support

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -42,6 +42,7 @@
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
-        "sha.js": "^2.4.11"
+        "sha.js": "^2.4.11",
+        "uuid-with-v6": "^1.1.2"
     }
 }
