--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -54,6 +54,7 @@
         "inversify": "^5.0.1",
         "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
-        "service-library": "1.0.0"
+        "service-library": "1.0.0",
+        "storage-documents": "1.0.0"
     }
 }
