--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -44,8 +44,10 @@
     },
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
+        "@azure/identity": "^1.0.0-preview.3",
         "@azure/keyvault": "^0.1.0",
         "@azure/ms-rest-nodeauth": "^1.1.1",
+        "@azure/storage-blob": "12.0.0-preview.2",
         "@azure/storage-queue": "^10.1.0",
         "common": "1.0.0",
         "dotenv": "^6.2.0",
