--- a/packages/workers/local.settings.json
+++ b/packages/workers/local.settings.json
@@ -2,6 +2,7 @@
     "IsEncrypted": false,
     "Values": {
         "FUNCTIONS_WORKER_RUNTIME": "node",
-        "AzureWebJobsStorage": "{AzureWebJobsStorage}"
+        "AzureWebJobsStorage": "{AzureWebJobsStorage}",
+        "cosmosDBConnection": ""
     }
 }
