--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@azure/functions": "^1.0.3",
         "@azure/cosmos": "^2.1.2",
         "@types/jest": "^24.0.11",
         "@types/node": "^11.13.4",
