--- a/packages/workers/local.settings.json
+++ b/packages/workers/local.settings.json
@@ -3,6 +3,6 @@
     "Values": {
         "FUNCTIONS_WORKER_RUNTIME": "node",
         "AzureWebJobsStorage": "{AzureWebJobsStorage}",
-        "cosmosDBConnection": ""
+        "COSMOS_CONNECTION_STRING": ""
     }
 }
