--- a/packages/web-api/.vscode/tasks.json
+++ b/packages/web-api/.vscode/tasks.json
@@ -16,7 +16,7 @@
             "label": "copy-local-settings",
             "dependsOn": "tsc",
             "windows": {
-                "command": "xcopy /Y local.settings.json .\\dist\\ & xcopy /Y .env .\\dist\\"
+                "command": ""
             },
             "osx": {
                 "command": "cp local.settings.json ./dist ; cp .env ./dist"
