--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -37,6 +37,7 @@
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
+        "mockdate": "^2.0.5",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.0",
@@ -49,11 +50,11 @@
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
+        "azure-services": "1.0.0",
         "common": "1.0.0",
         "inversify": "^5.0.1",
-        "reflect-metadata": "^0.1.13",
         "logger": "1.0.0",
-        "azure-services": "1.0.0",
+        "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
         "storage-documents": "1.0.0"
     }
