--- a/packages/function-apps/package.json
+++ b/packages/function-apps/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "workers",
+    "name": "function-apps",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name workers --colors",
+        "build": "webpack --config ./webpack.config.js --config-name function-apps --colors",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
