--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -27,6 +27,7 @@
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
+        "mockdate": "^2.0.5",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.2",
