--- a/package.json
+++ b/package.json
@@ -102,7 +102,10 @@
             "./packages/resource-deployment/dist",
             "./packages/web-api/dist",
             "./packages/web-api/node_modules",
-            "./packages/web-api/test-results"
+            "./packages/web-api/test-results",
+            "./packages/web-workers/dist",
+            "./packages/web-workers/node_modules",
+            "./packages/web-workers/test-results"
         ],
         "file_type_method": "INCLUDE",
         "file_types": [
