Web API - Scan request sender queueing and DB updates. (#296)
* Changing the export order

* Removing the comments

* Hello, Dependencies !

* Adding and deleting from DB for requests done.

* Changes to expose OnDemandPageScanRunResultProvider

* Everything works

* Queueing web api requests

* Adding the latest logic.

* Adding more unit tests

* Clean up

* Changing webpack config

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test": "npx jest",
         "lint": "npx lerna run lint --stream",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.base.json --force",
-        "precheckin": "npm-run-all --serial format lint build test copyright-check",
+        "precheckin": "npm-run-all --serial format build lint test copyright-check",
         "format": "npx prettier --write \"**/*\"",
         "format-check": "npx prettier --check \"**/*\"",
         "copyright-check": "license-check-and-add"
