--- a/packages/web-api-scan-job-manager/tsconfig.json
+++ b/packages/web-api-scan-job-manager/tsconfig.json
@@ -5,6 +5,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "compilerOptions": {
-        "outDir": "dist"
+        "outDir": "dist",
+        "experimentalDecorators": true
     }
 }
