--- a/build.yaml
+++ b/build.yaml
@@ -65,6 +65,9 @@ steps:
               scan-request-sender/dist/**/*
               resource-deployment/dist/**/*
               web-api/dist/**/*
+              web-api-scan-request-sender/dist/**/*
+              web-api-scan-runner/dist/**/*
+              web-api-scan-job-manager/dist/**/*
               !**/node_modules/**/*
               !**/.vscode/**/*
               !**/*.md
