--- a/build.yaml
+++ b/build.yaml
@@ -64,6 +64,8 @@ steps:
               runner/dist/**/*
               scan-request-sender/dist/**/*
               web-api-scan-request-sender/dist/**/*
+              web-api-scan-runner/dist/**/*
+              web-api-scan-job-manager/dist/**/*
               resource-deployment/dist/**/*
               web-api/dist/**/*
               !**/node_modules/**/*
