--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name web-api-scan-runner --colors",
+        "build": "webpack --config ./webpack.config.js --colors",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
@@ -49,14 +49,15 @@
         "@azure/cosmos": "^2.1.2",
         "axe-core": "3.2.2",
         "axe-puppeteer": "^1.0.0",
+        "axe-sarif-converter": "^2.1.0",
         "azure-services": "1.0.0",
         "common": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "logger": "1.0.0",
-        "scanner": "1.0.0",
         "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
+        "scanner": "1.0.0",
         "service-library": "1.0.0",
         "sha.js": "^2.4.11",
         "storage-documents": "1.0.0",
