--- a/packages/resource-deployment/templates/function-web-workers-app-template.json
+++ b/packages/resource-deployment/templates/function-web-workers-app-template.json
@@ -42,6 +42,13 @@
             "metadata": {
                 "description": "Name of the cosmos account that have the scan related data"
             }
+        },
+        "keyVaultName": {
+            "type": "string",
+            "defaultValue": "[concat('allyvault',toLower(uniqueString(resourceGroup().id)))]",
+            "metadata": {
+                "description": "Name of the key vault service"
+            }
         }
     },
     "resources": [
@@ -88,6 +95,10 @@
                         {
                             "name": "COSMOS_CONNECTION_STRING",
                             "value": "[first(listConnectionStrings(resourceId('Microsoft.DocumentDB/databaseAccounts', parameters('cosmosAccountName')), '2015-11-06').connectionStrings).connectionString]"
+                        },
+                        {
+                            "name": "KEY_VAULT_URL",
+                            "value": "[concat('https://', parameters('keyVaultName'), '.vault.azure.net/')]"
                         }
                     ]
                 }
