--- a/build.yaml
+++ b/build.yaml
@@ -68,6 +68,9 @@ steps:
               web-api-scan-job-manager/dist/**/*
               resource-deployment/dist/**/*
               web-api/dist/**/*
+              web-api-scan-request-sender/dist/**/*
+              web-api-scan-runner/dist/**/*
+              web-api-scan-job-manager/dist/**/*
               web-workers/dist/**/*
               !**/node_modules/**/*
               !**/.vscode/**/*
