--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -34,6 +34,7 @@
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
+        "mockdate": "^2.0.5",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.0",
@@ -54,6 +55,7 @@
         "common": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
+        "lodash": "^4.17.14",
         "logger": "1.0.0",
         "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
