--- a/packages/web-api-scan-job-manager/package.json
+++ b/packages/web-api-scan-job-manager/package.json
@@ -19,9 +19,13 @@
     "bugs": {
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/web-api-scan-job-manager#readme",
+    "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@types/dotenv": "^6.1.0",
         "@types/jest": "^24.0.11",
+        "@types/lodash": "^4.14.136",
+        "@types/node": "^11.9.4",
+        "@types/verror": "^1.10.3",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^24.9.0",
@@ -29,7 +33,7 @@
         "jest-junit": "^8.0.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
-        "ts-jest": "^24.0.2",
+        "ts-jest": "^24.0.0",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
@@ -39,11 +43,17 @@
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
-        "azure-services": "^1.0.0",
+        "@azure/batch": "^7.0.0",
+        "@azure/ms-rest-nodeauth": "^1.1.1",
+        "azure-services": "1.0.0",
         "common": "1.0.0",
+        "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
+        "lodash": "^4.17.14",
         "logger": "1.0.0",
+        "moment": "^2.22.2",
         "reflect-metadata": "^0.1.13",
-        "service-library": "1.0.0"
+        "service-library": "1.0.0",
+        "verror": "^1.10.0"
     }
 }
