--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -19,17 +19,25 @@
     "bugs": {
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/web-api-scan-runner#readme",
+    "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@types/dotenv": "^6.1.0",
         "@types/jest": "^24.0.11",
+        "@types/lodash": "^4.14.136",
+        "@types/node": "^11.9.4",
+        "@types/puppeteer": "^1.12.1",
+        "@types/sha.js": "^2.4.0",
+        "@types/verror": "^1.10.3",
+        "@types/yargs": "^12.0.9",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
+        "mockdate": "^2.0.5",
         "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
-        "ts-jest": "^24.0.2",
+        "ts-jest": "^24.0.0",
         "ts-loader": "^5.3.3",
         "tslint": "5.12.1",
         "tslint-microsoft-contrib": "6.0.0",
@@ -39,12 +47,23 @@
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
-        "azure-services": "^1.0.0",
+        "@azure/cosmos": "^2.1.2",
+        "axe-core": "3.2.2",
+        "axe-puppeteer": "^1.0.0",
+        "axe-sarif-converter": "^2.1.0",
+        "azure-services": "1.0.0",
         "common": "1.0.0",
+        "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
+        "lodash": "^4.17.14",
         "logger": "1.0.0",
+        "puppeteer": "^1.12.2",
         "reflect-metadata": "^0.1.13",
+        "scanner": "1.0.0",
         "service-library": "1.0.0",
-        "storage-documents": "1.0.0"
+        "sha.js": "^2.4.11",
+        "storage-documents": "1.0.0",
+        "verror": "^1.10.0",
+        "yargs": "^13.2.1"
     }
 }
