Support local runs

--- a/packages/resource-deployment/.env.template
+++ b/packages/resource-deployment/.env.template
@@ -14,6 +14,12 @@ AZURE_STORAGE_SCAN_QUEUE=scanrequest
 KEY_VAULT_URL=
 APPINSIGHTS_INSTRUMENTATIONKEY=
 
+COSMOS_DB_URL=
+COSMOS_DB_KEY=
+
+AZURE_STORAGE_NAME=
+AZURE_STORAGE_KEY=
+
 SP_CLIENT_ID=
 SP_TENANT=
 SP_PASSWORD=
