--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -108,7 +108,8 @@ paths:
                     content:
                         application/json:
                             example:
-                                href: 'https://docs.oasis-open.org/sarif/sarif/v2.1.0/cs01/sarif-v2.1.0-cs01.html'
+                                href: >-
+                                    https://docs.oasis-open.org/sarif/sarif/v2.1.0/cs01/sarif-v2.1.0-cs01.html
 components:
     schemas:
         ScanRunRequest:
@@ -203,8 +204,9 @@ components:
                     type: string
                 format:
                     type: string
-                    description: |
-                        SARIF format specification https://www.oasis-open.org/committees/sarif/charter.php
+                    description: >-
+                        SARIF format specification
+                        https://www.oasis-open.org/committees/sarif/charter.php
                     enum:
                         - sarif
                 links:
@@ -228,12 +230,16 @@ components:
             type: object
             required:
                 - scanId
+                - url
+                - run
             properties:
                 scanId:
                     type: string
                 url:
                     type: string
                 error:
+                    type: string
+                code:
                     type: string
                 scanResult:
                     $ref: '#/components/schemas/ScanResult'
