--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -278,6 +278,7 @@ components:
                     type: string
                     enum:
                         - InternalError
+                        - UrlNavigationTimeout
                 message:
                     type: string
         ScanRunErrorResponse:
