--- a/packages/web-api-scan-job-manager/.vscode/launch.json
+++ b/packages/web-api-scan-job-manager/.vscode/launch.json
@@ -2,7 +2,6 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-
     "version": "0.2.0",
     "configurations": [
         {
@@ -12,10 +11,10 @@
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/src/index.ts",
-            "preLaunchTask": "tsc",
+            "preLaunchTask": "run",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
-            "args": []
+            "smartStep": true
         }
     ]
 }
