--- a/packages/web-api-scan-job-manager/.vscode/tasks.json
+++ b/packages/web-api-scan-job-manager/.vscode/tasks.json
@@ -4,19 +4,27 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "tsc",
-            "command": "tsc",
-            "isShellCommand": true,
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
+            "type": "shell",
+            "label": "run",
+            "dependsOn": "tsc",
+            "windows": {
+                "command": "xcopy .env ./dist /y"
             },
-            "args": [],
+            "osx": {
+                "command": "cp .env ./dist"
+            }
+        },
+        {
+            "type": "shell",
+            "label": "tsc",
+            "dependsOn": "clean",
+            "command": "tsc",
             "problemMatcher": ["$tsc"]
+        },
+        {
+            "type": "shell",
+            "label": "clean",
+            "command": "npx rimraf dist"
         }
     ]
 }
