--- a/packages/web-api-scan-request-sender/.vscode/launch.json
+++ b/packages/web-api-scan-request-sender/.vscode/launch.json
@@ -2,20 +2,19 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Start debugging web-api-scan-request-sender",
+            "name": "Start debugging web-api-request-sender",
             "type": "node",
             "request": "launch",
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/src/index.ts",
-            "preLaunchTask": "tsc",
+            "preLaunchTask": "run",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
-            "args": []
+            "smartStep": true
         }
     ]
 }
