--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -287,6 +287,12 @@ components:
                     enum:
                         - InternalError
                         - UrlNavigationTimeout
+                        - HttpErrorCode
+                        - SslError
+                        - MainResourceLoadFailure
+                        - InvalidUrl
+                        - EmptyPage
+                        - NavigationError
                 codeId:
                     type: integer
                     format: int32
