--- a/packages/web-workers/package.json
+++ b/packages/web-workers/package.json
@@ -52,10 +52,12 @@
     "dependencies": {
         "azure-services": "1.0.0",
         "common": "1.0.0",
+        "durable-functions": "^1.3.0",
         "inversify": "^5.0.1",
         "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "storage-documents": "1.0.0"
+        "storage-documents": "1.0.0",
+        "moment": "^2.22.2"
     }
 }
