--- a/packages/web-api-client-library/package.json
+++ b/packages/web-api-client-library/package.json
@@ -22,6 +22,7 @@
         "@types/jest": "^24.0.11",
         "@types/lodash": "^4.14.136",
         "@types/node": "^11.13.4",
+        "@types/request": "^2.48.3",
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
@@ -37,6 +38,7 @@
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
+        "request": "^2.88.0",
         "service-library": "1.0.0"
     }
 }
