Create rest api client library (#383)
* create empty package for the web api client library

* add register function

* postScanUrl

* promisify

* modify test

* make url a param of contructor

* change env var name

* unit tests for getScanStatus and getScanReport

* move request and response type to service lib package

Co-authored-by: Kelsey <kepownel@microsoft.com>

* use 'defaults()' method provided by request lib

Co-authored-by: Kelsey <kepownel@microsoft.com>

* Add typings in client
Co-authored-by: Kelsey <kepownel@microsoft.com>

* renaming package

Co-authored-by: Kelsey <kepownel@microsoft.com>

* tslint fix

Co-authored-by: Kelsey <kepownel@microsoft.com>

* make sure the client reuses the same agent

* rename

* address comments

* remove index.ts

--- a/package.json
+++ b/package.json
@@ -105,7 +105,10 @@
             "./packages/web-api/test-results",
             "./packages/web-workers/dist",
             "./packages/web-workers/node_modules",
-            "./packages/web-workers/test-results"
+            "./packages/web-workers/test-results",
+            "./packages/web-api-client/dist",
+            "./packages/web-api-client/node_modules",
+            "./packages/web-api-client/test-results"
         ],
         "file_type_method": "INCLUDE",
         "file_types": [
