--- a/packages/web-api-client/package.json
+++ b/packages/web-api-client/package.json
@@ -39,6 +39,6 @@
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
         "request-promise": "^4.2.4",
-        "@azure/ms-rest-nodeauth": "^1.1.1"
+        "adal-node": "0.2.0"
     }
 }
