--- a/packages/web-api-client/package.json
+++ b/packages/web-api-client/package.json
@@ -38,6 +38,7 @@
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "request-promise": "^4.2.4"
+        "request-promise": "^4.2.4",
+        "adal-node": "0.2.0"
     }
 }
