--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -50,6 +50,7 @@
         "@azure/storage-blob": "12.0.0-preview.2",
         "@azure/storage-queue": "^10.1.0",
         "common": "1.0.0",
+        "moment": "^2.22.2",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
