--- a/packages/web-api-client/package.json
+++ b/packages/web-api-client/package.json
@@ -33,12 +33,13 @@
         "typescript": "^3.6.2"
     },
     "dependencies": {
+        "@azure/ms-rest-js": "^2.0.4",
+        "adal-node": "0.2.0",
         "common": "1.0.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
-        "service-library": "1.0.0",
         "request-promise": "^4.2.4",
-        "adal-node": "0.2.0"
+        "service-library": "1.0.0"
     }
 }
