updating swagger file with new error codes

--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -293,6 +293,8 @@ components:
                         - InvalidUrl
                         - EmptyPage
                         - NavigationError
+                        - InvalidContentType
+                        - UrlNotResolved
                 codeId:
                     type: integer
                     format: int32
