Consume temporary npm package

--- a/package.json
+++ b/package.json
@@ -144,5 +144,8 @@
         "axe-core": "^3.3.2",
         "lodash": "^4.17.14",
         "https-proxy-agent": "^3.0.1"
+    },
+    "dependencies": {
+        "markreay-accessibility-insights-report": "0.0.1"
     }
 }
