--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -43,6 +43,7 @@
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
+        "@azure/batch": "^7.0.0",
         "@azure/cosmos": "^2.1.2",
         "@azure/identity": "^1.0.0-preview.3",
         "@azure/keyvault": "^0.1.0",
